// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe() should return the first met error in pipe chain of validators 1`] = `
Object {
  "children": null,
  "message": "Test",
  "path": "",
}
`;

exports[`pipe() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
